<resources>
    <string name="app_name">Room Monitoring</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_alarm">Alarm</string>
    <string name="stop_button">Stop Alarm</string>
    <string name="title_activity_main">Rooms</string>
    <string name="title_activity_room_details">Room Details</string>

    <string name="ssl_confirm">The security certificate of %s is not trusted. Do you want to continue?</string>
    <string name="ssl_confirm_cert_changed">%s uses an invalid security certificate. The connection is not secure. Do you want to continue?</string>
    <string name="ssl_confirm_title">Untrusted Connection</string>
    <string name="issued_to">Issued To</string>
    <string name="finger_prints">Fingerprints</string>
    <string name="period_of_validity">Period of Validity</string>
    <string name="sha1">SHA-1 %s</string>
    <string name="md5">MD5 %s</string>
    <string name="not_available">not available</string>
    <string name="serial_number">Serial number %s</string>
    <string name="not_before">Valid from %s</string>
    <string name="not_after">Valid until %s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="temperature_alert_header">Temperature Alert</string>
    <string name="temperature_alert_sensor_header">Sensor</string>
    <string name="temperature_place_holder">--.-\u00b0</string>
    <string name="temperature_command_place_holder">--\u00b0</string>
    <string name="sensor_name_place_holder">------</string>
    <string name="humidity_place_holder">--.- %</string>
    <string name="active_anytime">Active anytime</string>
    <string name="start_time">Start Time</string>
    <string name="stop_time">Stop Time</string>
    <string name="min_temp">Min (F)</string>
    <string name="max_temp">Max (F)</string>
    <string name="alarm_is_onoff">Alarm is %s</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="temperatures">Temperatures</string>
    <string name="temperature_value_missing_or_invalid">%s Temperature value missing or invalid</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="max_temperature_must_be_higher_than_min_temperature">Max Temperature must be higher than Min temperature</string>
    <string name="start_and_stop_time_has_to_be_different">Start and Stop time has to be different</string>
    <string name="loading">Loading</string>
    <string name="waiting_for_connection">Waiting for connection....</string>
    <string name="connection_failed">Connection Failed!</string>
    <string name="use_https">Use https?</string>
    <string name="title_activity_connection">Connect Raspberry Pi</string>

    <!-- Strings related to login -->
    <string name="prompt_host">Host/IP</string>
    <string name="prompt_port">Port</string>
    <string name="prompt_user">User</string>
    <string name="prompt_password">Password</string>
    <string name="action_connect">Connect</string>
    <string name="error_invalid_user_password">Invalid user or password</string>
    <string name="error_unable_to_connect">Unable to connect, check Host/Port</string>
    <string name="error_field_required">This field is required</string>
    <string name="connection">Connection</string>
    <string name="connection_successful">Connection Successful</string>
    <string name="action_manage_plugins">Manage Plugins</string>
    <string name="timeout">Timeout</string>
    <string name="sensor_type">Type</string>
    <string name="cancel">Cancel</string>
    <string name="add_sensor">Add Sensor</string>
    <string name="select_sensor_type">Select Sensor Type</string>
    <string name="prompt_sensor_name">Sensor Name</string>
    <string name="select_device">Select a Device</string>
    <string name="add_device">Add Device</string>
    <string name="add_new">Add New</string>
    <string name="edit_sensor">Edit Sensor</string>
    <string name="prompt_device_name">Device Name</string>
    <string name="title_activity_sensor">Add Sensor</string>
    <string name="save">Save</string>
    <string name="ask_add_device">You\'ve not configure any device yet, would you like to add one?</string>
    <string name="no_sensor_to_add">No Sensor Available</string>
    <string name="ok">Ok</string>
    <string name="enter_credential">Enter Credential?</string>
    <string name="prompt_base_path">Base Path</string>
    <string name="ac">A/C</string>
    <string name="heater">Heater</string>
    <string name="remove_sensor">Remove Sensor</string>
    <string name="edit_sensor_name">Edit Sensor Name</string>
    <string name="remove_sensor_confirm">Remove the sensor %s?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage_sensors">Manage Sensors</string>
    <string name="device_name_place_holder">----------</string>
    <string name="sensor_icon">Sensor Icon</string>
    <string name="show_hide">Show or hide Sensor</string>
</resources>
