<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="marchandivan.RoomMonitoring.fragment.SensorConfigFragment">
    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/sensor_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/sensor_icon"
            android:src="@drawable/thermometer"/>
        <TextView
            android:id="@+id/sensor_name"
            android:text="@string/sensor_name_place_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/sensor_icon"
            android:layout_gravity="center"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10sp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"/>
        <ImageButton
            android:id="@+id/sensor_visibility"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:layout_toLeftOf="@+id/edit_sensor"
            android:layout_centerVertical="true"
            android:contentDescription="@string/show_hide"
            android:src="@drawable/ic_visible"/>
        <ImageButton
            android:id="@+id/edit_sensor"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/edit_sensor"
            android:src="@drawable/ic_edit"/>
    </RelativeLayout>
</LinearLayout>
