<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="marchandivan.RoomMonitoring.SensorDetailsActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/gray"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:gravity="left|center_vertical">
            <ImageView
                android:id="@+id/sensor_header_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/thermostat"/>
            <TextView
                android:id="@+id/sensor_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:text="@string/sensor_name_place_holder"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/humidity_display"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/humidity"/>
            <TextView
                android:id="@+id/humidity"
                android:text="--.- %"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin">
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/thermostat_mode_spinner"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"/>
        <LinearLayout
            android:id="@+id/temperature_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center">
            <TextView
                android:id="@+id/temperature"
                android:text="@string/temperature_place_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="70sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/temperature_command_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center">
            <ImageButton
                android:id="@+id/temp_plus"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:paddingBottom="16dp"
                android:src="@drawable/ic_plus"/>
            <TextView
                android:id="@+id/temperature_command"
                android:text="@string/temperature_command_place_holder"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center"/>
            <ImageButton
                android:id="@+id/temp_minus"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:paddingTop="16dp"
                android:src="@drawable/ic_minus"/>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/alarm_display"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/gray"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_alarm"/>
            <TextView
                android:text="Alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10sp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center"/>
            <ImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="16dp"
                android:src="@drawable/ic_plus"
                android:onClick="addAlarm"
                style="?android:attr/borderlessButtonStyle" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:id="@+id/alarm_list">
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
